--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -1,75 +1,21 @@
 <!-------------------------------------------------------------------------------------------------->
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
-<div data-type="container" data-preview="snippets/preview/articles_list.png" data-keditor-title="Articles List"
-    data-keditor-categories="Text;Heading;Photo">
-    <div class="row">
-        <div class="col-sm-4 ui-resizable" data-type="container-content">
-            <div data-type="component-photo">
-                <div class="photo-panel">
-                    <img src="snippets/img/somewhere_bangladesh_squared.jpg" width="100%" height=""
-                        style="display: inline-block;" class="img-circle">
-                </div>
-            </div>
-            <div data-type="component-text">
-                <h3 style="text-align: center;">Lorem ipsum</h3>
-                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, alias,
-                    temporibus? Vero natus modi ipsa debitis, accusamus accusantium cum quam. Saepe atque quisquam
-                    pariatur voluptatem expedita reprehenderit et vitae.</p>
-            </div>
-        </div>
-        <div class="col-sm-4 ui-resizable" data-type="container-content">
-            <div data-type="component-photo">
-                <div class="photo-panel">
-                    <img src="snippets/img/wellington_newzealand_squared.jpg" width="100%" height=""
-                        style="display: inline-block;" class="img-circle">
-                </div>
-            </div>
-            <div data-type="component-text">
-                <h3 style="text-align: center;">Lorem ipsum</h3>
-                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, aut,
-                    earum. Quod, debitis, delectus. Maxime eius ipsam sit dolorum perspiciatis obcaecati consectetur,
-                    explicabo reprehenderit repellat tempore eos ducimus!</p>
-            </div>
-        </div>
-        <div class="col-sm-4 ui-resizable" data-type="container-content">
-            <div data-type="component-photo">
-                <div class="photo-panel">
-                    <img src="snippets/img/yenbai_vietnam_squared.jpg" width="100%" height=""
-                        style="display: inline-block;" class="img-circle">
-                </div>
-            </div>
-            <div data-type="component-text">
-                <h3 style="text-align: center;">Lorem ipsum</h3>
-                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
-                    voluptatibus dicta corrupti aliquam, natus voluptatem pariatur quidem nostrum nisi corporis id
-                    ratione exercitationem et recusandae incidunt assumenda soluta qui odit.</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div data-type="container" data-preview="snippets/preview/featured_article.png" data-keditor-title="Featured Article"
     data-keditor-categories="Text;Heading;Photo">
     <div class="row">
-        <div class="col-sm-6" data-type="container-content">
-            <div data-type="component-photo">
-                <div class="photo-panel" style="text-align: center;">
-                    <img src="snippets/img/sydney_australia_squared.jpg" width="100%" height=""
-                        style="display: inline-block; height: 334px; width: 334px;" class="img-responsive img-circle">
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6" data-type="container-content">
-            <div data-type="component-text">
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi molestias eius quaerat, adipisci
-                    ratione aliquid eum explicabo illum temporibus? Optio facilis eveniet quam, impedit eos architecto
-                    sequi dolorum illo facere, consequatur sit voluptatibus sunt eius ad officia corrupti modi quia
-                    minima voluptas vero. Minus, maxime! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi
-                    molestias eius quaerat, adipisci ratione aliquid eum explicabo.</p>
-            </div>
-        </div>
+        <a href="#" class="btn btn-primary" role="button"
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px;">Button</a>
+        <br>
+        <a href="#" class="btn btn-default" role="button"
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px;">Button</a>
+        <br>
+        <a href="#" class="btn btn-primary" role="button"
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 0px;">Button</a>
+        <br>
+        <a href="#" class="btn btn-default" role="button"
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px;">Button</a>
     </div>
 </div>
 
