Trying to get rid of categories

--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -2,7 +2,7 @@
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
 
-<div data-type="container" data-preview="snippets/preview/featured_article.png" data-keditor-title="Featured Article"
+<div data-type="container" data-preview="snip_1.png" data-keditor-title="Featured Article"
     data-keditor-categories="Text;Heading;Photo">
     <div class="row">
         <a href="#" class="btn btn-primary" role="button"
