--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -27,8 +27,8 @@
                             <section data-type="component-text">
                                 <div class="page-header">
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: medium;">Welcome
-                                            to SwitchPages</b>
+                                            style="display: flex; justify-content: center; font-size: large;">Welcome
+                                            to SwitchPage</b>
                                     </h1>
                                     <a href="#" class="btn btn-primary" role="button"
                                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px;">Button</a>
