--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -2,24 +2,23 @@
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
 
-<div data-type="container" data-preview="snip_1.png" data-keditor-title="Featured Article"
-    data-keditor-categories="Text;Heading;Photo">
+<div data-type="container" data-keditor-title="Featured Article" data-keditor-categories="Text;Heading;Photo">
     <div class="row">
         <a href="#" class="btn btn-primary" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px;">Button</a>
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">Button</a>
         <br>
         <a href="#" class="btn btn-default" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px;">Button</a>
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">Button</a>
         <br>
         <a href="#" class="btn btn-primary" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 0px;">Button</a>
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 0px; padding: 15px; border-radius: 14px;">Button</a>
         <br>
         <a href="#" class="btn btn-default" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px;">Button</a>
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; padding: 15px; border-radius: 14px;">Button</a>
     </div>
 </div>
 
-<div data-type="container" data-preview="snippets/preview/thumbnail_panel.png" data-keditor-title="Thumbnail Panel"
+<div data-type="container" data-keditor-title="Thumbnail Panel"
     data-keditor-categories="Text;Photo;Bootstrap component">
     <div class="row">
         <div class="col-sm-12">
