--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -31,7 +31,7 @@
                                             to SwitchPage</b>
                                     </h1>
                                     <a href="#" class="btn btn-primary" role="button"
-                                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">Button</a>
+                                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; padding: 15px; border-radius: 14px; background-color: black; border: none;">Button</a>
                                     <br>
                                     <a href="#" class="btn btn-default" role="button"
                                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">Button</a>
