--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -26,8 +26,11 @@
                         <div class="col-sm-12">
                             <section data-type="component-text">
                                 <div class="page-header">
+                                    <img src="snippets/img/face.png" width="30%" height="" class="img-responsive"
+                                        style="border-radius: 300px; margin: auto;" />
+
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: large;">Welcome
+                                            style="display: flex; justify-content: center; font-size: x-large;">Welcome
                                             to SwitchPage</b>
                                     </h1>
                                     <a href="#" class="btn btn-primary" role="button"
