--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -30,7 +30,7 @@
                                         style="border-radius: 300px; margin: auto;" />
 
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: x-large;">Welcome
+                                            style="display: flex; justify-content: center; font-size: 2rem;">Welcome
                                             to SwitchPage</b>
                                     </h1>
                                     <a href="#" class="btn btn-primary" role="button"
