--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -27,10 +27,10 @@
                             <section data-type="component-text">
                                 <div class="page-header">
                                     <img src="snippets/img/face.png" width="30%" height="" class="img-responsive"
-                                        style="border-radius: 300px; margin: auto;" />
+                                        style="margin: auto;" />
 
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: 2rem;">Welcome
+                                            style="display: flex; justify-content: center; font-size: 1.6rem;">Welcome
                                             to SwitchPage</b>
                                     </h1>
                                     <a href="#" class="btn btn-primary" role="button"
