--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -5,7 +5,7 @@
 <div data-type="container" data-keditor-title="Featured Article" data-keditor-categories="Text;Heading;Photo">
     <div class="row">
         <a href="#" class="btn btn-primary" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; padding: 15px; border-radius: 14px; background-color: black; border: none;">Facebook</a>
+            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 4px; padding: 15px; border-radius: 14px; background-color: black; border: none;">Facebook</a>
         <br>
         <a href="#" class="btn btn-default" role="button"
             style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">Snapchat</a>
