--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -30,16 +30,11 @@
                                         style="border-radius: 200px; margin: auto;" />
 
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: 1.6rem;">Welcome
+                                            style="display: flex; justify-content: center; font-size: 2.2rem;">Welcome
                                             to SwitchPage</b>
                                     </h1>
-                                    <a href="#" class="btn btn-primary" role="button"
-                                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; padding: 15px; border-radius: 14px; background-color: black; border: none;">Instagram</a>
-                                    <br>
-                                    <a href="#" class="btn btn-default" role="button"
-                                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 14px;">LinkedIn</a>
-                                    <br>
-                                </div>
+                                    <p style="text-align: center;">Click the plus button to add a section to your page
+                                        and double click individual elements inside each section to edit them</p>
                             </section>
                         </div>
                     </div>
