--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -1,7 +1,7 @@
 <!-------------------------------------------------------------------------------------------------->
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
-<div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Featured Article"
+<div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Linked Button List"
     data-keditor-categories="Text;Heading;Photo">
     <div class="row">
         <a href="#" class="btn btn-primary" role="button"
