--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -26,15 +26,15 @@
                         <div class="col-sm-12">
                             <section data-type="component-text">
                                 <div class="page-header">
-                                    <img src="snippets/img/cat.jpg" width="30%" height="" class="img-responsive"
-                                        style="border-radius: 200px; margin: auto;" />
+                                    <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
+                                        style="margin: auto; clip-path: circle(55px at center);" />
 
                                     <h1><b class="text-uppercase"
                                             style="display: flex; justify-content: center; font-size: 2.2rem;">Welcome
                                             to SwitchPage</b>
                                     </h1>
                                     <p style="text-align: center;">Click the plus button to add a section to your page
-                                        and double click individual elements inside each section to edit them</p>
+                                        and double tap/click individual elements inside each section to edit them</p>
                             </section>
                         </div>
                     </div>
