--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -14,7 +14,7 @@
 
 <div data-type="container" data-preview="snippets/preview/thumbnail_panel.png" data-keditor-title="Thumbnail Panel"
     data-keditor-categories="Text;Photo;Bootstrap component">
-    <div class="row">
+    <div class="row" style="margin: auto;">
         <div class="col-sm-12">
             <div class="thumbnail" data-type="container-content">
                 <div data-type="component-photo">
@@ -30,6 +30,7 @@
                     <p>
                         <a href="#" class="btn btn-primary" role="button">Button</a>
                         <a href="#" class="btn btn-default" role="button">Button</a>
+                        <a href="#" class="btn btn-primary" role="button">Button</a>
                     </p>
                 </div>
             </div>
@@ -40,15 +41,6 @@
 <!-------------------------------------------------------------------------------------------------->
 <!-- Components -->
 <!-------------------------------------------------------------------------------------------------->
-<div data-type="component-text" data-preview="snippets/preview/page_header.png" data-keditor-title="Page header"
-    data-keditor-categories="Text;Heading;Bootstrap component">
-    <div class="page-header">
-        <h1 style="margin-bottom: 30px; font-size: 50px;"><b class="text-uppercase">Cras justo odio</b> <small>Donec id
-                elit non mi</small></h1>
-        <p class="lead"><em>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-                gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</em></p>
-    </div>
-</div>
 
 <div data-type="component-text" data-preview="snippets/preview/text.png" data-keditor-title="Text block"
     data-keditor-categories="Text">
@@ -61,10 +53,34 @@
 
 <div data-type="component-text" data-preview="snippets/preview/jumbotron.png" data-keditor-title="Jumbotron"
     data-keditor-categories="Text;Heading;Bootstrap component">
-    <div class="jumbotron">
+    <div class="jumbotron" style="margin: auto;">
         <h1>Hello, world!</h1>
         <p>This is a simple hero unit</p>
         <p><a role="button" href="#" class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+</div>
+
+<div data-type="component-audio" data-preview="snippets/preview/audio.png" data-keditor-title="Audio"
+    data-keditor-categories="Media">
+    <div class="audio-wrapper" style="margin: auto;">
+        <audio src="http://www.noiseaddicts.com/samples_1w72b820/2558.mp3" controls style="width: 100%"></audio>
+    </div>
+</div>
+
+<div data-type="component-text" data-preview="snippets/preview/heading_1.png" data-keditor-title="Heading 1"
+    data-keditor-categories="Text;Heading" style="margin: auto;">
+    <h1>Heading text 1</h1>
+    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
+        Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+</div>
+
+<div data-type="component-googlemap" data-preview="snippets/preview/googlemap.png" data-keditor-title="Google Map"
+    data-keditor-categories="Gmap" style="margin: auto;">
+    <div class="googlemap-wrapper">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item"
+                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14897.682811563638!2d105.82315895!3d21.0158462!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1456466192755"></iframe>
+        </div>
     </div>
 </div>
 
@@ -75,47 +91,13 @@
     </div>
 </div>
 
-<div data-type="component-audio" data-preview="snippets/preview/audio.png" data-keditor-title="Audio"
-    data-keditor-categories="Media">
-    <div class="audio-wrapper">
-        <audio src="http://www.noiseaddicts.com/samples_1w72b820/2558.mp3" controls style="width: 100%"></audio>
-    </div>
-</div>
-
-<div data-type="component-googlemap" data-preview="snippets/preview/googlemap.png" data-keditor-title="Google Map"
-    data-keditor-categories="Gmap">
-    <div class="googlemap-wrapper">
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item"
-                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14897.682811563638!2d105.82315895!3d21.0158462!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1456466192755"></iframe>
-        </div>
-    </div>
-</div>
-
-<div data-type="component-text" data-preview="snippets/preview/heading_1.png" data-keditor-title="Heading 1"
-    data-keditor-categories="Text;Heading">
-    <h1>Heading text 1</h1>
-    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-        Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-</div>
-
 <div data-type="component-text" data-preview="snippets/preview/heading_2.png" data-keditor-title="Heading 2"
-    data-keditor-categories="Text;Heading">
+    data-keditor-categories="Text;Heading" style="margin: auto;">
     <h2>Heading text 2</h2>
     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
         Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
 </div>
 
 <div data-type="component-form" data-preview="snippets/preview/form.png" data-keditor-title="Bootstrap Form"
-    data-keditor-categories="Form;Bootstrap component"></div>
-
-<div data-type="component-nonExisting" data-preview="snippets/preview/text.png" data-website="website01"
-    data-blog="blog01" data-article="article01" data-tags="tag01,tag02"
-    data-keditor-title="Text block with dynamic content" data-keditor-categories="Text;Dynamic component">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro labore architecto fuga tempore omnis aliquid,
-        rerum numquam deleniti ipsam earum velit aliquam deserunt, molestiae officiis mollitia accusantium suscipit
-        fugiat esse magnam eaque cumque, iste corrupti magni? Illo dicta saepe, maiores fugit aliquid consequuntur aut,
-        rem ex iusto dolorem molestias obcaecati eveniet vel voluptatibus recusandae illum, voluptatem! Odit est
-        possimus nesciunt.</p>
-    <div data-dynamic-href="snippets/dynamic_content.html"></div>
+    data-keditor-categories="Form;Bootstrap component">
 </div>
