--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -25,7 +25,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <section data-type="component-text">
-                                <div class="page-header" style="margin-top: 0px;">
+                                <div class="page-header" style="margin-top: 0px; border: none;">
                                     <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
                                         style="margin: auto; clip-path: circle(55px at center);" />
 
