--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -1,15 +1,41 @@
 <!-------------------------------------------------------------------------------------------------->
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
-<div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Linked Button List"
-    data-keditor-categories="Text;Heading;Photo">
-    <div class="row">
-        <a href="#" class="btn btn-primary" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 14px; background-color: black; border: none;">Facebook</a>
-        <br>
-        <a href="#" class="btn btn-default" role="button"
-            style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 30px; padding: 15px; border-radius: 14px;">Snapchat</a>
+<div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Single Linked Button"
+    data-keditor-categories="Text;Photo;Bootstrap component">
+    <div class="row" style="margin: auto;">
+        <div class="col-sm-12">
+            <div class="thumbnail" data-type="container-content" style="border: none">
+                <p>
+                    <a href="#" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151);">Facebook</a>
+                </p>
+            </div>
+        </div>
     </div>
+</div>
+</div>
+
+<div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Linked Button List"
+    data-keditor-categories="Text;Photo;Bootstrap component">
+    <div class="row" style="margin: auto;">
+        <div class="col-sm-12">
+            <div class="thumbnail" data-type="container-content"
+                style="border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151); border-radius: 25px;">
+                <p>
+                    <a href="https://instagram.com, _blank" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
+                    <br>
+                    <a href="https://linkedin.com" class="btn btn-default" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 20px;">LinkedIn</a>
+                    <br>
+                    <a href="https://facebook.com" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 30px; margin-top: 0px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Facebook</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 <div data-type="container" data-preview="snippets/preview/thumbnail_panel.png" data-keditor-title="Thumbnail Panel"
@@ -30,7 +56,6 @@
                     <p>
                         <a href="#" class="btn btn-primary" role="button">Button</a>
                         <a href="#" class="btn btn-default" role="button">Button</a>
-                        <a href="#" class="btn btn-primary" role="button">Button</a>
                     </p>
                 </div>
             </div>
