--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -1,21 +1,6 @@
 <!-------------------------------------------------------------------------------------------------->
 <!-- Container with content -->
 <!-------------------------------------------------------------------------------------------------->
-<div data-type="container" data-preview="snippets/preview/snip_2.png" data-keditor-title="Single Linked Button"
-    data-keditor-categories="Text;Photo;Bootstrap component">
-    <div class="row" style="margin: auto;">
-        <div class="col-sm-12">
-            <div class="thumbnail" data-type="container-content" style="border: none">
-                <p>
-                    <a href="#" class="btn btn-primary" role="button"
-                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151);">Facebook</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-
 <div data-type="container" data-preview="snippets/preview/snip_1.png" data-keditor-title="Linked Button List"
     data-keditor-categories="Text;Photo;Bootstrap component">
     <div class="row" style="margin: auto;">
@@ -36,7 +21,21 @@
         </div>
     </div>
 </div>
+
+<div data-type="container" data-preview="snippets/preview/snip_2.png" data-keditor-title="Single Linked Button"
+    data-keditor-categories="Text;Photo;Bootstrap component">
+    <div class="row" style="margin: auto;">
+        <div class="col-sm-12">
+            <div class="thumbnail" data-type="container-content" style="border: none">
+                <p>
+                    <a href="#" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151);">Facebook</a>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <div data-type="container" data-preview="snippets/preview/thumbnail_panel.png" data-keditor-title="Thumbnail Panel"
     data-keditor-categories="Text;Photo;Bootstrap component">
@@ -54,8 +53,9 @@
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
                         at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p>
-                        <a href="#" class="btn btn-primary" role="button">Button</a>
-                        <a href="#" class="btn btn-default" role="button">Button</a>
+                        <a href="#" class="btn btn-primary" role="button"
+                            style="background-color: black; border: none; border-radius: 8px;">Button</a>
+                        <a href="#" class="btn btn-default" role="button" style="border-radius: 8px;">Button</a>
                     </p>
                 </div>
             </div>
