--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SwitchPage Content Editor</title>
+    <title>SwichPage Content Editor</title>
     <link rel="stylesheet" type="text/css" href="./plugins/bootstrap-3.4.1/css/bootstrap.min.css"
         data-type="keditor-style" />
     <link rel="stylesheet" type="text/css" href="./plugins/font-awesome-4.7.0/css/font-awesome.min.css"
@@ -31,7 +31,7 @@
 
                                     <h1><b class="text-uppercase"
                                             style="display: flex; justify-content: center; font-size: 2.2rem;">Welcome
-                                            to SwitchPage</b>
+                                            to SwichPage</b>
                                     </h1>
                                     <p style="text-align: center;">Click the plus button to add a section to your page
                                         and double tap/click individual elements inside each section to edit them</p>
