--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -8,7 +8,7 @@
             <div class="thumbnail" data-type="container-content"
                 style="border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151); border-radius: 25px;">
                 <p>
-                    <a href="https://www.instagram.com/" class="btn btn-primary" role="button"
+                    <a href="https://www.instagram.com/" target="_blank" class="btn btn-primary" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
                     <br>
                     <a href="#https://www.linkedin.com/" class="btn btn-default" role="button"
