--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -15,7 +15,6 @@
     <!-- End of KEditor styles -->
     <link rel="stylesheet" type="text/css" href="./plugins/code-prettify/src/prettify.css" />
     <link rel="stylesheet" type="text/css" href="./css/examples.css" />
-</head>
 
 <body>
     <div data-keditor="html">
@@ -30,10 +29,11 @@
                                         style="margin: auto; clip-path: circle(55px at center);" />
 
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: 2.2rem;">Welcome
+                                            style="display: flex; justify-content: center; font-size: 2.2rem; color: white;">Welcome
                                             to SwichPage</b>
                                     </h1>
-                                    <p style="text-align: center;">Click the plus button to add a section to your page
+                                    <p style="text-align: center; color: white;">Click the plus button to add a section
+                                        to your page
                                         and double tap/click individual elements inside each section to edit them</p>
                             </section>
                         </div>
