--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -6,7 +6,7 @@
     <div class="row" style="margin: auto;">
         <div class="col-sm-12">
             <div class="thumbnail" data-type="container-content"
-                style="border: none; box-shadow: 2px 6px 16px rgba(143, 143, 143, 0.151); border-radius: 25px; background-color: rgb(26, 26, 26);">
+                style="border: none; box-shadow: 2px 6px 16px rgba(10, 10, 10, 0.13); border-radius: 25px;">
                 <p>
                     <a href="https://www.instagram.com/" target="_blank" class="btn btn-primary" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
