--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -6,7 +6,7 @@
     <div class="row" style="margin: auto;">
         <div class="col-sm-12">
             <div class="thumbnail" data-type="container-content"
-                style="border: none; box-shadow: 2px 6px 16px rgba(10, 10, 10, 0.13); border-radius: 25px;">
+                style="border: none; box-shadow: 2px 6px 16px rgba(211, 211, 211, 0.13); border-radius: 25px; background-color: rgb(228, 228, 228);">
                 <p>
                     <a href="https://www.instagram.com/" target="_blank" class="btn btn-primary" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
@@ -25,15 +25,15 @@
 <div data-type="container" data-preview="snippets/preview/snip_2.png" data-keditor-title="Single Linked Button"
     data-keditor-categories="Text;Photo;Bootstrap component">
     <div class="row" style="margin: auto;">
-        <div class="col-sm-12">
-            <div class="thumbnail" data-type="container-content" style="border: none">
-                <p>
-                    <a href="#" class="btn btn-primary" role="button"
-                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 20px; margin-top: 20px; padding: 15px; border-radius: 20px; background-color: black; border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151);">Facebook</a>
-                </p>
-            </div>
+        <div class="col-sm-12" style="background-color: rgba(255, 255, 255, 0);>
+            <div class=" thumbnail" data-type="container-content" style="border: none">
+            <p>
+                <a href="#" class="btn btn-primary" role="button"
+                    style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 20px; margin-top: 20px; padding: 15px; border-radius: 20px; background-color: black; border: none; box-shadow: 2px 6px 16px rgba(0, 0, 0, 0.151);">Facebook</a>
+            </p>
         </div>
     </div>
+</div>
 </div>
 
 
