--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -11,10 +11,10 @@
                     <a href="https://www.instagram.com/" target="_blank" class="btn btn-primary" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
                     <br>
-                    <a href="#https://www.linkedin.com/" class="btn btn-default" role="button"
+                    <a href="https://www.linkedin.com/" target="_blank" class="btn btn-default" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 20px;">LinkedIn</a>
                     <br>
-                    <a href="https://facebook.com" class="btn btn-primary" role="button"
+                    <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary" role="button"
                         style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 30px; margin-top: 0px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Facebook</a>
                 </p>
             </div>
