--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -29,10 +29,12 @@
                                         style="margin: auto; clip-path: circle(55px at center);" />
 
                                     <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: 2.2rem; color: white;">Welcome
+                                            style="display: flex; justify-content: center; font-size: 2rem; color: white;">Welcome
                                             to SwichPage</b>
                                     </h1>
-                                    <p style="text-align: center; color: white;">Click the plus button to add a section
+                                    <p style="text-align: center; color: white; font-size: 1.5rem;">Click the plus
+                                        button
+                                        to add a section
                                         to your page
                                         and double tap/click individual elements inside each section to edit them</p>
                             </section>
