--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -36,6 +36,26 @@
 </div>
 </div>
 
+<div data-type="container" data-preview="snippets/preview/snip_3.png" data-keditor-title="Link List, No Container"
+    data-keditor-categories="Text;Photo;Bootstrap component">
+    <div class="row" style="margin: auto;">
+        <div class="col-sm-12">
+            <div class="thumbnail" data-type="container-content"
+                style="border: none; background-color: rgba(228, 228, 228, 0);">
+                <p>
+                    <a href="https://www.instagram.com/" target="_blank" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 0px; margin-top: 30px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Instagram</a>
+                    <br>
+                    <a href="https://www.linkedin.com/" target="_blank" class="btn btn-default" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-top: 0px; margin-bottom: 0px; padding: 15px; border-radius: 20px;">LinkedIn</a>
+                    <br>
+                    <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary" role="button"
+                        style="display: flex; align-items: center; justify-content: center; margin: 50px; margin-bottom: 30px; margin-top: 0px; padding: 15px; border-radius: 20px; background-color: black; border: none;">Facebook</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div data-type="container" data-preview="snippets/preview/thumbnail_panel.png" data-keditor-title="Thumbnail Panel"
     data-keditor-categories="Text;Photo;Bootstrap component">
