--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -17,27 +17,29 @@
     <link rel="stylesheet" type="text/css" href="./css/examples.css" />
 
 <body>
+
     <div data-keditor="html">
         <div id="content-area">
             <section>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <section data-type="component-text">
-                                <div class="page-header" style="margin-top: 0px; border: none;">
-                                    <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
-                                        style="margin: auto; clip-path: circle(55px at center);" />
+                <div data-type="container" data-preview="snippets/preview/featured_article.png"
+                    data-keditor-title="Social Buttons" data-keditor-categories="Text;Heading;Photo">
+                    <div class="row" style="display: flex; justify-content: center;">
+                        <div class="col-sm-6" data-type="container-content">
+                            <div data-type="component-text"
+                                style="text-align: center; color: white; margin-left: 20px;">
+                                <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
+                                    style="margin: auto; clip-path: circle(55px at center);" />
 
-                                    <h1><b class="text-uppercase"
-                                            style="display: flex; justify-content: center; font-size: 2rem; color: white;">Welcome
-                                            to SwichPage</b>
-                                    </h1>
-                                    <p style="text-align: center; color: white; font-size: 1.5rem;">Click the plus
-                                        button
-                                        to add a section
-                                        to your page
-                                        and double tap/click individual elements inside each section to edit them</p>
-                            </section>
+                                <h1><b class="text-uppercase"
+                                        style="display: flex; justify-content: center; font-size: 2rem; color: white;">Welcome
+                                        to SwichPage</b>
+                                </h1>
+                                <p style="text-align: center; color: white; font-size: 1.5rem;">Click the plus
+                                    button
+                                    to add a section
+                                    to your page
+                                    and double tap/click individual elements inside each section to edit them</p>
+                            </div>
                         </div>
                     </div>
                 </div>
