--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -87,6 +87,24 @@
 <!-- Components -->
 <!-------------------------------------------------------------------------------------------------->
 
+<div data-type="container" data-preview="snippets/preview/featured_article.png" data-keditor-title="Social Buttons"
+    data-keditor-categories="Text;Heading;Photo">
+    <div class="row" style="display: flex; justify-content: center;">
+        <div class="col-sm-6" data-type="container-content">
+            <div data-type="component-text" style="text-align: center; color: white; margin-left: 20px;">
+                <h3>Lorem ipsum</h3>
+                <i class="fas fa-camera"></i>
+            </div>
+        </div>
+        <div class="col-sm-6" data-type="container-content">
+            <div data-type="component-text" style="text-align: center; color: white; margin-right: 20px;">
+                <h3>Lorem ipsum</h3>
+                <i class="fas fa-camera"></i>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div data-type="component-form" data-preview="snippets/preview/form.png" data-keditor-title="Form"
     data-keditor-categories="Form;Bootstrap component">
 </div>
