--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -23,22 +23,49 @@
             <section>
                 <div data-type="container" data-preview="snippets/preview/featured_article.png"
                     data-keditor-title="Social Buttons" data-keditor-categories="Text;Heading;Photo">
-                    <div class="row" style="display: flex; justify-content: center;">
+                    <div class="row">
                         <div class="col-sm-6" data-type="container-content">
-                            <div data-type="component-text"
-                                style="text-align: center; color: white; margin-left: 20px;">
+                            <div data-type="component-text" style="text-align: center; color: white;">
                                 <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
-                                    style="margin: auto; clip-path: circle(55px at center);" />
+                                    style="margin: auto; clip-path: circle(55px at center); display: flex; justify-content: center;" />
 
                                 <h1><b class="text-uppercase"
                                         style="display: flex; justify-content: center; font-size: 2rem; color: white;">Welcome
                                         to SwichPage</b>
                                 </h1>
-                                <p style="text-align: center; color: white; font-size: 1.5rem;">Click the plus
+                                <p
+                                    style="margin-bottom: 20px; margin-left: 15px; margin-right: 15px; text-align: center; color: white; font-size: 1.5rem;">
+                                    Click the
+                                    plus
                                     button
                                     to add a section
                                     to your page
-                                    and double tap/click individual elements inside each section to edit them</p>
+                                    and double tap/click individual elements inside each section to edit them
+                                </p>
+                                <div data-type="container" data-preview="snippets/preview/thumbnail_panel.png"
+                                    data-keditor-title="Thumbnail Panel"
+                                    data-keditor-categories="Text;Photo;Bootstrap component">
+                                    <div class="row" style="margin: auto; display: flex; justify-content: center;">
+                                        <div class="col-sm-12">
+                                            <div class="thumbnail" data-type="container-content">
+                                                <div data-type="component-text">
+                                                    <a href="#" class="btn btn-primary" role="button"
+                                                        style="background-color: black; border: none; border-radius: 8px;">Button
+                                                    </a>
+                                                    <a href="#" class="btn btn-default" role="button"
+                                                        style="border-radius: 8px;">Button
+                                                    </a>
+                                                    <a href="#" class="btn btn-primary" role="button"
+                                                        style="background-color: black; border: none; border-radius: 8px;">Button
+                                                    </a>
+                                                    <a href="#" class="btn btn-default" role="button"
+                                                        style="border-radius: 8px;">Button
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
