--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -34,7 +34,7 @@
                                         to SwichPage</b>
                                 </h1>
                                 <p
-                                    style="margin-bottom: 20px; margin-left: 15px; margin-right: 15px; text-align: center; color: white; font-size: 1.5rem;">
+                                    style="margin-bottom: 26px; margin-left: 15px; margin-right: 15px; text-align: center; color: white; font-size: 1.5rem;">
                                     Click the
                                     plus
                                     button
@@ -47,19 +47,20 @@
                                     data-keditor-categories="Text;Photo;Bootstrap component">
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
                                         <div class="col-sm-12">
-                                            <div class="thumbnail" data-type="container-content">
+                                            <div class="thumbnail" data-type="container-content"
+                                                style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 8px;">Button
+                                                        style="background-color: black; border: none; border-radius: 12px; margin: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 8px;">Button
+                                                        style="border-radius: 12px; margin: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 8px;">Button
+                                                        style="background-color: black; border: none; border-radius: 12px; margin: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 8px;">Button
+                                                        style="border-radius: 12px; margin: 8px;">LINK
                                                     </a>
                                                 </div>
                                             </div>
