--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -47,7 +47,7 @@
                                     data-keditor-categories="Text;Photo;Bootstrap component">
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
                                         <div class="col-sm-12">
-                                            <div class="thumbnail" data-type="container-content"
+                                            <div class="thumbnail" data-type=""
                                                 style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
