--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -24,7 +24,7 @@
                 <div data-type="container" data-preview="snippets/preview/featured_article.png"
                     data-keditor-title="Social Buttons" data-keditor-categories="Text;Heading;Photo">
                     <div class="row">
-                        <div class="col-sm-6" data-type="container-content">
+                        <div class="col-sm-6">
                             <div data-type="component-text" style="text-align: center; color: white;">
                                 <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
                                     style="margin: auto; clip-path: circle(55px at center); display: flex; justify-content: center;" />
@@ -47,7 +47,7 @@
                                     data-keditor-categories="Text;Photo;Bootstrap component">
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
                                         <div class="col-sm-12">
-                                            <div class="thumbnail" data-type=""
+                                            <div class="thumbnail" data-type="container-content"
                                                 style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
