--- a/examples/snippets/snippets.html
+++ b/examples/snippets/snippets.html
@@ -87,7 +87,7 @@
 <!-- Components -->
 <!-------------------------------------------------------------------------------------------------->
 
-<div data-type="container" data-preview="snippets/preview/featured_article.png" data-keditor-title="Social Buttons"
+<div data-type="" data-preview="snippets/preview/featured_article.png" data-keditor-title="Social Buttons"
     data-keditor-categories="Text;Heading;Photo">
     <div class="row" style="display: flex; justify-content: center;">
         <div class="col-sm-6" data-type="container-content">
