--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -48,19 +48,23 @@
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
                                         <div class="col-sm-12">
                                             <div class="thumbnail" data-type="container-content"
-                                                style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none;">
+                                                style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none; padding: 12px;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 12px; margin: 8px;">LINK
+                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 12px; margin: 8px;">LINK
+                                                        style="border-radius: 20px; margin: 8px; padding: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 12px; margin: 8px;">LINK
+                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 12px; margin: 8px;">LINK
+                                                        style="border-radius: 20px; margin: 8px; padding: 8px;">LINK
+                                                    </a>
+                                                    <br>
+                                                    <a href="#" class="btn btn-primary" role="button"
+                                                        style="background-color: black; border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px;">WEBSITE
                                                     </a>
                                                 </div>
                                             </div>
