--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -24,7 +24,7 @@
                 <div data-type="container" data-preview="snippets/preview/featured_article.png"
                     data-keditor-title="Social Buttons" data-keditor-categories="Text;Heading;Photo">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="">
                             <div data-type="component-text" style="text-align: center; color: white;">
                                 <img src="snippets/img/headshot.jpg" width="60%" height="" class="img-responsive"
                                     style="margin: auto; clip-path: circle(55px at center); display: flex; justify-content: center;" />
@@ -34,7 +34,7 @@
                                         to SwichPage</b>
                                 </h1>
                                 <p
-                                    style="margin-bottom: 26px; margin-left: 15px; margin-right: 15px; text-align: center; color: white; font-size: 1.5rem;">
+                                    style="margin-bottom: 30px; margin-left: 22px; margin-right: 22px; text-align: center; color: white; font-size: 1.5rem;">
                                     Click the
                                     plus
                                     button
@@ -46,25 +46,25 @@
                                     data-keditor-title="Thumbnail Panel"
                                     data-keditor-categories="Text;Photo;Bootstrap component">
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
-                                        <div class="col-sm-12">
+                                        <div class="">
                                             <div class="thumbnail" data-type="container-content"
-                                                style="border-radius: 15px; background-color: rgb(228, 228, 228); border: none; padding: 12px;">
+                                                style="border-radius: 15px; background-color: rgb(236, 236, 236); border: none; padding: 12px;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px;">LINK
+                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 20px; margin: 8px; padding: 8px;">LINK
+                                                        style="border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: black">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px;">LINK
+                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 20px; margin: 8px; padding: 8px;">LINK
+                                                        style="border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: black;">LINK
                                                     </a>
                                                     <br>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px;">WEBSITE
+                                                        style="background-color: black; border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px; font-weight: bold; font-size: 1.8rem;">WEBSITE
                                                     </a>
                                                 </div>
                                             </div>
