--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -51,20 +51,20 @@
                                                 style="border-radius: 15px; background-color: rgb(236, 236, 236); border: none; padding: 12px;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
+                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: black">LINK
+                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255)">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
+                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: black;">LINK
+                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255);">LINK
                                                     </a>
                                                     <br>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background-color: black; border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px; font-weight: bold; font-size: 1.8rem;">WEBSITE
+                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px; font-weight: bold; font-size: 1.8rem;">WEBSITE
                                                     </a>
                                                 </div>
                                             </div>
